erDiagram
    USERS ||--o{ BOOKINGS : "makes"
    USERS ||--o| VENUES : "owns (admin)"
    VENUES ||--o{ COURTS : "has"
    VENUES ||--o{ VENUE_FACILITIES : "offers"
    VENUES ||--o{ VENUE_IMAGES : "shows"
    COURTS ||--o{ COURT_SCHEDULES : "open per"
    COURTS ||--o{ BOOKINGS : "reserved in"
    BOOKINGS ||--o| PAYMENTS : "paid by"

    USERS {
        int id PK
        varchar name
        varchar email UK
        varchar password_hash
        enum role "user|admin"
        timestamp created_at
    }

    VENUES {
        int id PK
        varchar name
        varchar city
        int price_per_hour
        varchar tag
        text description "About"
        varchar image_path "thumbnail"
        varchar main_image_path "hero"
        int owner_id FK "admin owner (ADR-0006)"
    }

    VENUE_FACILITIES {
        int id PK
        int venue_id FK
        varchar name "Shower, Parking, ..."
    }

    VENUE_IMAGES {
        int id PK
        int venue_id FK
        varchar image_path
        int sort_order
    }

    COURTS {
        int id PK
        int venue_id FK
        varchar label "Lapangan 1 / A"
        enum type "indoor|outdoor"
    }

    COURT_SCHEDULES {
        int id PK
        int court_id FK
        enum day_band "everyday|mon_fri|sat_sun"
        int start_hour
        int end_hour "exclusive"
        int price "per hour"
    }

    BOOKINGS {
        int id PK
        varchar code UK "PDL-0001"
        int court_id FK
        int user_id FK
        date date
        int start_hour "7..20"
        int end_hour "exclusive"
        enum status "pending|paid|expired|cancelled"
        timestamp created_at
    }

    PAYMENTS {
        int id PK
        int booking_id FK "UK 1:1"
        int amount
        enum status "paid|refunded"
        timestamp paid_at
        timestamp refunded_at
    }
